Fix theme-darkthing date pickers being unreadable

--- a/static/less/theme-darkthing/darkthing.less
+++ b/static/less/theme-darkthing/darkthing.less
@@ -22,6 +22,19 @@
   color: #df001f;
 }
 
+// DATEPICKER
+// ----------
+.datepicker table {
+  background: @grayDarker;
+}
+.datepicker td.day {
+  color: @grayLighter;
+}
+.datepicker td.old,
+.datepicker td.new {
+  color: #777;
+}
+
 // TABS
 // -----------------------------------------------------
 .nav > li > a:hover {
@@ -110,6 +123,9 @@ input[type="tel"],
 input[type="color"],
 .uneditable-input {
   color: #111;
+}
+.add-on {
+  color: @gray;
 }
 
 // POPOVERS
